fix formatting; use Java 21 features